--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
+	<script type="text/javascript" src="js/pixi-animate.js"></script>
+	<script type="text/javascript" src="stage.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<style type="text/css">
 		body {
