Apply new design
Use newer assests
Organize stage.fla
Refactor Game update logic

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
     <script type="text/javascript" src="js/es6-check.js"></script>
     <script type="text/javascript" src="js/vendor/pixi-animate.js"></script>
-    <script type="text/javascript" src="resources/stage.js"></script>
+    <script type="text/javascript" src="js/stage.js"></script>
 
     <script type="text/javascript" src="js/vendor/codemirror.js"></script>
     <script type="text/javascript" src="js/vendor/javascript.js"></script>
+
+    <script type="text/javascript" src="js/vendor/p2.js"></script>
+
     <script type="text/javascript" src="js/Game.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
