Move Rocket to a separete class

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <script type="text/javascript" src="js/vendor/p2.js"></script>
 
+    <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/Rocket.js"></script>
     <script type="text/javascript" src="js/Game.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
