--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="js/vendor/p2.js"></script>
 
     <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/Planet.js"></script>
     <script type="text/javascript" src="js/Rocket.js"></script>
     <script type="text/javascript" src="js/Game.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
