--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <input type="email" name="email" placeholder="Your email">
             <input type="hidden" name="_subject" value="Hack Conf submission" />
             <input type="hidden" name="submission" value="">
+            <input type="checkbox" name="consent" value="false">Прочетох и се съгласявам с Условията на играта
+
             <button type="submit">Submit</button>
         </form>
     </div>
