--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <input type="checkbox" id="agreement" name="consent" value="false">
                 <label for="agreement">Прочетох и съм съгласен с Общите правила на играта</label>
             </div>
-            <a class="conditions" href="#">Общи правила</a>
-            <button type="submit">Submit</button>
+            <a class="conditions" href="#condition-container">Общи правила</a>
+            <button id="submit" type="submit">Submit</button>
         </form>
     </div>
 
