Update checkbox label

--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
             <div class="agreement">
                 <img src="images/check.png">
                 <input type="checkbox" id="agreement" name="consent" value="false">
-                <label for="agreement">Прочетох и съм съгласен с Общите правила на играта</label>
+                <label for="agreement">Прочетох и съм съгласен с <a class="conditions" href="#condition-container">Общите правила</a></label>
             </div>
-            <a class="conditions" href="#condition-container">Общи правила</a>
             <button id="submit" type="submit">Submit</button>
         </form>
     </div>
