Add mission text

--- a/index.html
+++ b/index.html
@@ -66,24 +66,25 @@
     </div>
 
     <div id="splash-container" class="prompt-container">
-        <h3><span>Mission:</span> Land the Rocket on Mars</h3>
+        <h2><span>Мисия:</span>Приземи ракетата на Марс</h2>
         <div class="content-container">
             <div class="content">
+                <h3>Препоръки за успешна мисия:</h3>
                 <p>
-                    Everyone who has successfully completed the mission of the game receives an invitation to draw from specific rewards.
+                    <span>Планетите ще ви отклоняват със своята гравитация;</span>
+                    <span>Ракетата трябва да кацне с носа навън от центъра на Марс;</span>
+                    <span>Прекалено високата скорост води до разбиване на ракетата.</span>
                 </p>
-
+                <p class="bold">Имате неограничен брой опити да приземите ракетата.</p>
                 <p>
-                    <span>Registration form includes:</span>
-                    Personal email address and ‘Your code’ from the back of the brochure.
+                    Всеки успешно изпълнил мисията на играта ще получи покана за еднократна регистрация за
+                    участие в жребий с награди. Там трябва да въведе валиден имейл адрес и 8 (осем) цифрен
+                    персонален код, намиращ се на гърба на брошурата, предоставена от Организатора.
                 </p>
-
-                <span>For any technical problems, please contact us here:</span>
-                <span class="email">info@dopamine.bg</span>
-
-                <button type="submit">OK</button>
+                <p>При технически проблеми, моля, свържете се с нас: <a href="mailto:info@dopamine.bg">info@dopamine.bg</a></p>
             </div>
         </div>
+        <button type="submit">OK</button>
         <img class="close" src="images/close.png">
     </div>
 
