fix: "Make sure your form has the method="POST" attribute"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="images/win-rocket.png">
         <h1 class="title">You landed the rocket!</h1>
 
-        <form method="POST" action="http://formspree.io/challenge@dopamine.bg">
+        <form method="POST" action="https://formspree.io/challenge@dopamine.bg">
             <input name="code" placeholder="Your code" maxlength="8" minlength="8">
             <input type="email" name="email" placeholder="Your email">
             <input type="hidden" name="_subject" value="Hack Conf submission" />
