Update style in splash container

--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
         <h2><span>Мисия:</span>Приземи ракетата на Марс</h2>
         <div class="content-container">
             <div class="content">
-                <h3>Препоръки за успешна мисия:</h3>
+                <h3>Насоки:</h3>
+                <img src="images/capture.jpg">
                 <p>
-                    <span>Планетите ще ви отклоняват със своята гравитация;</span>
+                    <span>Съобразете, че планетите отклоняват със своята гравитация;</span>
                     <span>Ракетата трябва да кацне с носа навън от центъра на Марс;</span>
-                    <span>Прекалено високата скорост води до разбиване на ракетата.</span>
+                    <span>Не надвишавайте маскималната зададена скорост на ракетата.</span>
                 </p>
                 <p class="bold">Имате неограничен брой опити да приземите ракетата.</p>
                 <p>
@@ -81,7 +82,7 @@
                     участие в жребий с награди. Там трябва да въведе валиден имейл адрес и 8 (осем) цифрен
                     персонален код, намиращ се на гърба на брошурата, предоставена от Организатора.
                 </p>
-                <p>При технически проблеми, моля, свържете се с нас: <a href="mailto:info@dopamine.bg">info@dopamine.bg</a></p>
+                <p class="email-connect">При технически проблеми, моля, свържете се с нас: <a href="mailto:info@dopamine.bg">info@dopamine.bg</a></p>
             </div>
         </div>
         <button type="submit">OK</button>
