Update text in splash

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p>
                     Всеки успешно изпълнил мисията на играта ще получи покана за еднократна регистрация за
                     участие в жребий с награди. Там трябва да въведе валиден имейл адрес и 8 (осем) цифрен
-                    персонален код, намиращ се на гърба на брошурата, предоставена от Организатора.
+                    персонален код, намиращ се на гърба на брошурата, предоставена от Организатора на играта.
                 </p>
                 <p class="email-connect">При технически проблеми, моля, свържете се с нас: <a href="mailto:info@dopamine.bg">info@dopamine.bg</a></p>
             </div>
